Gtk: Fix window titlebar color when using dark theme

Before:
https://bugs.chromium.org/p/chromium/issues/detail?id=782980
After:
https://bugs.chromium.org/p/chromium/issues/detail?id=782980#c1

BUG=782980
R=erg@chromium.org
TBR=msw@chromium.org

Change-Id: I0f0bc6e29bb821215fffaa98ea56d50b3abcd72d
Reviewed-on: https://chromium-review.googlesource.com/758633
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515244}
Former-commit-id: 4affc0751ef4ae3db46c06fa0f23049898f5a724